Fix "randomize" button being too wide in single-column display, change page header to include game name

--- a/WebHostLib/static/styles/playerOptions/playerOptions.scss
+++ b/WebHostLib/static/styles/playerOptions/playerOptions.scss
@@ -17,6 +17,19 @@ html{
     color: #eeffeb;
     word-break: break-all;
 
+    #player-options-header{
+        h1{
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+
+        h1:nth-child(2){
+            font-size: 1.4rem;
+            margin-top: -8px;
+            margin-bottom: 0.5rem;
+        }
+    }
+
     .group-container{
         padding: 0;
         margin: 0;
@@ -290,6 +303,7 @@ html{
             flex-direction: column;
             justify-content: center;
             height: 22px;
+            max-width: 30px;
             margin: 0 0 0 0.25rem;
             font-size: 14px;
             border: 1px solid black;
